Changing URL to URL Array

--- a/src/main/resources/ValidationMessages_en_US.properties
+++ b/src/main/resources/ValidationMessages_en_US.properties
@@ -1,4 +1,7 @@
-microservice.email.error=The contact email must be a valid email address and must not be blank
-microservice.description.error=Description must contain 1-50 printable characters and must not be blank
-microservice.title.error=Title must contain 1-50 printable characters and must not be blank
+microservice.email.error=The contact email must be in a valid email address format.
+microservice.description.error=Description must contain 1-50 printable characters.
+microservice.title.error=Title must contain 1-50 printable characters.
 microservice.url.error=URL must be in a valid URL format.
+microservice.title.blank=Title cannot be blank.
+microservice.description.blank=Description cannot be blank.
+microservice.email.blank=The contact email cannot be blank.
